--- a/style/style.scss
+++ b/style/style.scss
@@ -20,20 +20,67 @@ header {
       font-size: 7em;
       font-family: "GreatVibes";
       padding-top: 40px;
-    }
-    ul {
-      display: flex;
-      gap: 50px;
+      @include mini-ordi {
+        font-size: 6em;
+      }
+      @include mini-mobile-s {
+        font-size: 5em;
+      }
     }
   }
-  .logo {
-    margin-top: -100px;
+  .logoContainer {
+    max-width: 100%;
+    @include ordi {
+      max-width: 350px;
+    }
+    @include mini-ordi {
+      max-width: 300px;
+      padding-top: 50px;
+    }
+    @include tablet {
+      display: none;
+    }
+    .logo {
+      max-width: 100%;
+    }
+  }
+
+  .nav {
+    .nav-item {
+      display: contents;
+      a {
+        font-size: 1.5em;
+        color: white;
+        text-decoration: none;
+        transition: all 0.2s ease-in-out;
+        &:hover {
+          color: #b9927d;
+        }
+      }
+    }
+    li + li:before {
+      content: "/";
+      font-size: 2em;
+      font-weight: 100;
+    }
   }
   .hourAdress {
     display: flex;
     justify-content: center;
     gap: 200px;
     padding-bottom: 40px;
+    @include mini-ordi {
+      gap: 70px;
+    }
+    @include tablet {
+      gap: 40px;
+    }
+    @include mobile {
+      gap: 20px;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
     &_each {
       display: flex;
       justify-content: center;
@@ -41,10 +88,16 @@ header {
       gap: 20px;
       span {
         font-size: 3em;
+        @include tablet {
+          font-size: 2em;
+        }
       }
       p {
         font-size: 1.7em;
         margin: 0;
+        @include tablet {
+          font-size: 1.5em;
+        }
       }
     }
   }
@@ -52,59 +105,101 @@ header {
 
 .sectionAbout {
   background-color: $primary-color;
-  display: flex;
-  justify-content: center;
-  align-items: start;
-  padding-top: 100px;
-  padding-bottom: 70px;
-  gap: 50px;
-  div {
-    max-width: 50%;
-    h2 {
-      font-size: 3em;
-      font-family: "InriaSerif";
-      padding-bottom: 20px;
+  .about {
+    display: flex;
+    justify-content: space-around;
+    align-items: start;
+    padding-top: 100px;
+    padding-bottom: 70px;
+    gap: 50px;
+    max-width: 75%;
+    margin: auto;
+    @include mini-ordi {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
     }
-    h3 {
-      font-family: 2em;
-      font-family: "Grenze";
-      padding-bottom: 20px;
-    }
-    p {
-      font-size: 1.3em;
-    }
-    .coffeeImg {
-      max-width: 500px;
-      margin-top: -50px;
+    &_each {
+      max-width: 50%;
+      @include mini-ordi {
+        max-width: 100%;
+      }
+      h2 {
+        font-size: 3em;
+        font-family: "InriaSerif";
+        padding-bottom: 20px;
+      }
+      h3 {
+        font-family: 2em;
+        font-family: "Grenze";
+        padding-bottom: 20px;
+      }
+      p {
+        font-size: 1.3em;
+      }
+      .coffeeImg {
+        max-width: 500px;
+        margin-top: -50px;
+        @include mini-ordi {
+          max-width: 300px;
+        }
+        @include mini-mobile {
+          max-width: 200px;
+          padding-bottom: 50px;
+        }
+      }
     }
   }
 }
 
 .sectionMenu {
   background-color: $second-color;
+  padding-bottom: 70px;
   .grid {
+    max-width: 75%;
+    margin: auto;
+    @include mini-ordi {
+      max-width: 85%;
+    }
+    @include tablet {
+      max-width: 90%;
+    }
     .grid-1 {
-      max-width: 75%;
-      height: 600px;
+      height: 500px;
       padding-bottom: 20px;
-      margin: auto;
+      @include tablet {
+        height: 300px;
+        padding-bottom: 10px;
+      }
     }
     .grid-2 {
-      max-width: 75%;
-      height: 500px;
-      margin: auto;
+      height: 400px;
+      @include tablet {
+        height: 300px;
+      }
     }
     img {
       object-fit: cover;
       max-width: 100%;
       max-height: 100%;
       margin-top: -70px;
+      padding-right: 20px;
+      padding-left: 0;
+      @include tablet {
+        padding-right: 10px;
+      }
+    }
+    .last {
+      padding-right: 0px;
     }
   }
   .menu {
     margin: auto;
     max-width: 75%;
     padding-bottom: 70px;
+    @include mini-ordi {
+      max-width: 85%;
+    }
     h3 {
       font-family: "InriaSerif";
       font-weight: bold;
@@ -121,13 +216,22 @@ header {
       justify-content: space-between;
       gap: 50px;
       padding-bottom: 70px;
+      @include mobile {
+        flex-direction: column;
+      }
       &_1 {
         width: 50%;
         border-top: 1px solid #222;
+        @include mobile {
+          width: 100%;
+        }
       }
       &_2 {
         width: 50%;
         border-top: 1px solid #222;
+        @include mobile {
+          width: 100%;
+        }
       }
       &_each {
         display: flex;
@@ -138,6 +242,126 @@ header {
           margin: 0;
           font-size: 1.3em;
         }
+      }
+    }
+  }
+}
+
+.sectionCard {
+  background-color: $primary-color;
+  padding-bottom: 70px;
+  .cards {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 20px;
+    max-width: 75%;
+    margin: auto;
+    @include mini-ordi {
+      flex-direction: column;
+      gap: 100px;
+      max-width: 60%;
+    }
+    @include tablet {
+      max-width: 75%;
+    }
+    @include mobile {
+      max-width: 90%;
+    }
+    &_each {
+      text-align: center;
+      display: inherit;
+      flex-direction: column;
+      gap: 10px;
+      width: 100%;
+      img {
+        object-fit: cover;
+        max-width: 100%;
+        height: 300px;
+        margin-top: -70px;
+        margin-bottom: 10px;
+        border-radius: 5px;
+      }
+      h4 {
+        font-family: "InriaSerif";
+        font-weight: bold;
+      }
+      p {
+        font-size: 1.2em;
+      }
+    }
+  }
+}
+
+footer {
+  background-color: $footer-color;
+  color: white;
+  padding: 50px 0 1px;
+  .info {
+    max-width: 75%;
+    margin: auto;
+    display: flex;
+    justify-content: space-around;
+    @include mini-ordi {
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      gap: 20px;
+    }
+    &_each {
+      h3 {
+        font-family: "Grenze";
+        padding-bottom: 10px;
+        margin-bottom: 10px;
+        border-bottom: solid white 1px;
+        font-size: 3.5em;
+        @include mobile {
+          font-size: 3em;
+        }
+      }
+      p {
+        font-size: 1.3em;
+        margin-bottom: 5px;
+        a {
+          color: white;
+          text-decoration: none;
+          transition: all 0.2s ease-in-out;
+          &:hover {
+            color: #b9927d;
+          }
+        }
+      }
+    }
+  }
+  .icon {
+    padding-top: 50px;
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    a {
+      font-size: 2.5em;
+      color: white;
+      transition: all 0.2s ease-in-out;
+      &:hover {
+        color: #b9927d;
+      }
+    }
+  }
+  .brand {
+    padding-top: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 20px;
+    @include mini-mobile {
+      gap: 10px;
+    }
+    a {
+      color: white;
+      text-decoration: none;
+      transition: all 0.2s ease-in-out;
+      &:hover {
+        color: #b9927d;
       }
     }
   }
