--- a/style/style.scss
+++ b/style/style.scss
@@ -46,6 +46,9 @@ header {
   }
 
   .nav {
+    @include mobile {
+      justify-content: center;
+    }
     .nav-item {
       display: contents;
       a {
@@ -56,12 +59,19 @@ header {
         &:hover {
           color: #b9927d;
         }
+        @include mini-mobile {
+          font-size: 1.2em;
+          padding: 10px;
+        }
       }
     }
     li + li:before {
       content: "/";
       font-size: 2em;
       font-weight: 100;
+      @include mini-mobile {
+        font-size: 1.9em;
+      }
     }
   }
   .hourAdress {
@@ -97,6 +107,14 @@ header {
         margin: 0;
         @include tablet {
           font-size: 1.5em;
+        }
+        a {
+          color: white;
+          text-decoration: none;
+          transition: all 0.2s ease-in-out;
+          &:hover {
+            color: #b9927d;
+          }
         }
       }
     }
@@ -322,13 +340,13 @@ footer {
       p {
         font-size: 1.3em;
         margin-bottom: 5px;
-        a {
-          color: white;
-          text-decoration: none;
-          transition: all 0.2s ease-in-out;
-          &:hover {
-            color: #b9927d;
-          }
+      }
+      a {
+        color: white;
+        text-decoration: none;
+        transition: all 0.2s ease-in-out;
+        &:hover {
+          color: #b9927d;
         }
       }
     }
