--- a/style/style.scss
+++ b/style/style.scss
@@ -12,6 +12,9 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  @include mobile {
+    height: 100vh;
+  }
   .mainTitle {
     display: flex;
     justify-content: space-between;
@@ -22,6 +25,9 @@ header {
       padding-top: 40px;
       @include mini-ordi {
         font-size: 6em;
+      }
+      @include mobile {
+        padding-bottom: 20px;
       }
       @include mini-mobile-s {
         font-size: 5em;
@@ -193,7 +199,7 @@ header {
     .grid-2 {
       height: 400px;
       @include tablet {
-        height: 300px;
+        height: 200px;
       }
     }
     img {
@@ -277,7 +283,7 @@ header {
     margin: auto;
     @include mini-ordi {
       flex-direction: column;
-      gap: 100px;
+      gap: 150px;
       max-width: 60%;
     }
     @include tablet {
