--- a/style/style.css
+++ b/style/style.css
@@ -53,6 +53,7 @@ header {
 @media all and (max-width: 576px) {
   header {
     height: 90vh;
+    justify-content: space-around;
   }
 }
 header .mainTitle {
@@ -68,6 +69,11 @@ header .mainTitle h1 {
 @media all and (max-width: 1050px) {
   header .mainTitle h1 {
     font-size: 6em;
+  }
+}
+@media all and (max-width: 576px) {
+  header .mainTitle h1 {
+    display: none;
   }
 }
 @media all and (max-width: 350px) {
@@ -89,16 +95,26 @@ header .logoContainer {
     padding-top: 50px;
   }
 }
-@media all and (max-width: 770px) {
+@media all and (max-width: 576px) {
   header .logoContainer {
-    display: none;
+    max-width: 100%;
   }
 }
 header .logoContainer .logo {
   max-width: 100%;
 }
+header .nav {
+  margin-top: -70px;
+  padding-left: 30px;
+}
+@media all and (max-width: 1200px) {
+  header .nav {
+    margin-top: -30px;
+  }
+}
 @media all and (max-width: 576px) {
   header .nav {
+    margin-top: 10px;
     justify-content: center;
   }
 }
@@ -113,6 +129,12 @@ header .nav .nav-item a {
 }
 header .nav .nav-item a:hover {
   color: #b9927d;
+}
+@media all and (max-width: 770px) {
+  header .nav .nav-item a {
+    font-size: 1.2em;
+    padding: 10px;
+  }
 }
 @media all and (max-width: 400px) {
   header .nav .nav-item a {
@@ -134,6 +156,7 @@ header .hourAdress {
   display: flex;
   justify-content: center;
   gap: 200px;
+  padding-top: 10%;
   padding-bottom: 40px;
 }
 @media all and (max-width: 1050px) {
@@ -169,12 +192,12 @@ header .hourAdress_each span {
   }
 }
 header .hourAdress_each p {
-  font-size: 1.7em;
+  font-size: 1.5em;
   margin: 0;
 }
 @media all and (max-width: 770px) {
   header .hourAdress_each p {
-    font-size: 1.5em;
+    font-size: 1.3em;
   }
 }
 header .hourAdress_each p a {
@@ -434,7 +457,7 @@ footer .info_each h3 {
   padding-bottom: 10px;
   margin-bottom: 10px;
   border-bottom: solid white 1px;
-  font-size: 3.5em;
+  font-size: 3em;
 }
 @media all and (max-width: 576px) {
   footer .info_each h3 {
@@ -442,7 +465,7 @@ footer .info_each h3 {
   }
 }
 footer .info_each p {
-  font-size: 1.3em;
+  font-size: 1.2em;
   margin-bottom: 5px;
 }
 footer .info_each a {
@@ -460,7 +483,7 @@ footer .icon {
   gap: 30px;
 }
 footer .icon a {
-  font-size: 2.5em;
+  font-size: 2em;
   color: white;
   transition: all 0.2s ease-in-out;
 }
