--- a/style/style.css
+++ b/style/style.css
@@ -53,7 +53,7 @@ header {
 @media all and (max-width: 576px) {
   header {
     height: 90vh;
-    justify-content: space-around;
+    justify-content: start;
   }
 }
 header .mainTitle {
@@ -175,6 +175,7 @@ header .hourAdress {
     flex-direction: column;
     align-items: center;
     text-align: center;
+    padding-top: 20%;
   }
 }
 header .hourAdress_each {
