--- a/style/style.scss
+++ b/style/style.scss
@@ -14,7 +14,7 @@ header {
   justify-content: space-between;
   @include mobile {
     height: 90vh;
-    justify-content: space-around;
+    justify-content: start;
   }
   .mainTitle {
     display: flex;
@@ -108,6 +108,7 @@ header {
       flex-direction: column;
       align-items: center;
       text-align: center;
+      padding-top: 20%;
     }
     &_each {
       display: flex;
