--- a/style/style.css
+++ b/style/style.css
@@ -114,7 +114,8 @@ header .nav {
 }
 @media all and (max-width: 576px) {
   header .nav {
-    margin-top: 10px;
+    margin-top: 20px;
+    padding-left: 0;
     justify-content: center;
   }
 }
