--- a/style/style.scss
+++ b/style/style.scss
@@ -59,7 +59,8 @@ header {
       margin-top: -30px;
     }
     @include mobile {
-      margin-top: 10px;
+      margin-top: 20px;
+      padding-left: 0;
       justify-content: center;
     }
     .nav-item {
